--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tilelive-cifs",
+  "name": "tilelive-road-weather",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,7 @@
     "geojson-vt": "^3.2.1",
     "lodash": "^4.17.20",
     "node-cache": "^5.1.2",
+    "request": "^2.88.2",
     "requestretry": "^4.1.2",
     "vt-pbf": "^3.1.1"
   },
